fixed readme test urls

--- a/test_projects/readme/_expected/index.html
+++ b/test_projects/readme/_expected/index.html
@@ -19,10 +19,10 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Readme Test" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"A simple GitHub Action for producing Jekyll build artifacts compatible with GitHub Pages.","headline":"Readme Test","name":"jekyll-build-pages","url":"http://localhost:4000/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"A simple GitHub Action for producing Jekyll build artifacts compatible with GitHub Pages.","headline":"Readme Test","name":"jekyll-build-pages","url":"https://github.com/pages/u1trav101/jekyll-build-pages/"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <link rel="stylesheet" href="/assets/css/style.css?v=3247d6c3c75f79eb4f91237746f3ef270c0dc7a0">
+    <link rel="stylesheet" href="/pages/u1trav101/jekyll-build-pages/assets/css/style.css?v=JEKYLL_BUILD_REVISION">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -33,7 +33,7 @@
 
 
 <!-- You can set your favicon here -->
-<!-- link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" -->
+<!-- link rel="shortcut icon" type="image/x-icon" href="/pages/u1trav101/jekyll-build-pages/favicon.ico" -->
 
 <!-- end custom head snippets -->
 
@@ -41,7 +41,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="http://localhost:4000/">jekyll-build-pages</a></h1>
+        <h1><a href="https://github.com/pages/u1trav101/jekyll-build-pages/">jekyll-build-pages</a></h1>
 
         
 
@@ -72,6 +72,6 @@
         <p><small>Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="/assets/js/scale.fix.js"></script>
+    <script src="/pages/u1trav101/jekyll-build-pages/assets/js/scale.fix.js"></script>
   </body>
 </html>
