--- a/test_projects/octicons/_expected/index.html
+++ b/test_projects/octicons/_expected/index.html
@@ -41,7 +41,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="/">jekyll-build-pages</a></h1>
+        <h1><a href="https://github.com/pages/u1trav101/jekyll-build-pages/">jekyll-build-pages</a></h1>
 
         
 
