--- a/test_projects/simple/_expected/index.html
+++ b/test_projects/simple/_expected/index.html
@@ -41,7 +41,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="/">Jekyll Actions Demo</a></h1>
+        <h1><a href="https://github.com/pages/u1trav101/jekyll-build-pages/">Jekyll Actions Demo</a></h1>
 
         
 
