--- a/test_projects/jekyll-include-cache/_expected/index.html
+++ b/test_projects/jekyll-include-cache/_expected/index.html
@@ -33,7 +33,7 @@
 
 
 <!-- You can set your favicon here -->
-<!-- link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" -->
+<!-- link rel="shortcut icon" type="image/x-icon" href="/pages/u1trav101/jekyll-build-pages/favicon.ico" -->
 
 <!-- end custom head snippets -->
 
